# lore

./: .gitignore  .lore.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MIGRATION-PLUGIN-MANIFEST.md  NEXT_SESSION.md  README.md  install.sh  plugin.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.lore/: scheduled_review_2026-05-11.md
agents/: lore-session-writer.md
docs/: REVIEW-2026-04-25-three-lens-state-of-lore.md  REVIEW-2026-04-26-claim-audit.md  ROADMAP-cleanup.md
examples/: gitattributes-catalog-merge-ours  settings.json  wiki-curator-on-push.yml  wiki-lint.yml  wiki-quartz-publish.yml
scripts/: purge_curator_transcripts.py
templates/: root-CLAUDE.md  session.md  wiki-CLAUDE.md
tests/: conftest.py  test_abstract.py  test_adapter_claude_code.py  test_adapter_manual_send.py  test_adapter_protocol.py  test_adapter_registry.py  test_adapter_registry_plan3.py  test_adapter_tool_category.py  test_attach.py  test_attach_interactive.py  test_attachments_file.py  test_auto_diagnostics_e2e.py  test_breadcrumb.py  test_briefing.py  test_c_adjacent_merge.py  test_c_auto_supersede.py  test_c_coordination.py  test_c_draft_promotion.py  test_c_high_off_degradation.py  test_c_integration_final.py  test_c_integration_skeleton.py  test_c_orphan_links.py  test_c_ships_dark_gate.py  test_capture_state.py  test_cli_attach_matrix.py  test_cli_attachments.py  test_cli_curator_run.py  test_cli_doctor_phase4.py  test_cli_ingest.py  test_cli_registry.py  test_cli_runs.py  test_cli_scopes.py  test_cli_surface.py  test_cli_wiki.py  test_cluster.py  (+105 more)
(+177 files in other folders)
