[project]
name = "lore"
version = "0.2.1"
description = "LLM-optimized knowledge graph for AI-coding teams"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Christof Buchbender" },
]
keywords = ["knowledge-graph", "obsidian", "claude-code", "mcp", "llm", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6",
]

[project.optional-dependencies]
search = [
    "model2vec>=0.3",
    "watchdog>=4",
]
mcp = [
    "mcp>=1.0",
]
sinks = [
    "matrix-nio>=0.24",  # matrix
    "requests>=2.31",    # slack, discord, gh discussions
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
lore = "lore_cli.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["lib"]

[tool.setuptools.package-data]
"lore_cli" = ["hosts.d/*.toml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4"]
